--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -22,3 +22,10 @@ An enchanted forest dimension.'''
     versionRange="[36.1.0,)"
     ordering="NONE"
     side="BOTH"
+
+[[dependencies.twilightforest]]
+    modId="immersiveengineering"
+    mandatory=false
+    versionRange="[1.16.5-5.0.6-141,)"
+    ordering="BEFORE"
+    side="BOTH"
