fixed banner pattern crash

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -158,6 +158,10 @@ public net.minecraft.world.level.levelgen.carver.WorldCarver m_159418_(Lnet/mine
 public net.minecraft.tags.StaticTagHelper$Wrapper
 public net.minecraft.tags.StaticTagHelper$Wrapper f_13251_ # tag
 
+# Used in TFClientSetup
+public net.minecraft.client.renderer.Sheets m_173387_(Lnet/minecraft/world/level/block/entity/BannerPattern;)Lnet/minecraft/client/resources/model/Material; # createBannerMaterial
+public net.minecraft.client.renderer.Sheets m_173389_(Lnet/minecraft/world/level/block/entity/BannerPattern;)Lnet/minecraft/client/resources/model/Material; # createShieldMaterial
+
 # Used in ChunkGeneratorTwilightBase
 public net.minecraft.world.level.levelgen.NoiseBasedChunkGenerator f_64333_ # seed
 public net.minecraft.world.level.chunk.ChunkGenerator f_62140_ # strongholdSeed
