--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -50,9 +50,6 @@ public net.minecraft.world.entity.ai.control.MoveControl$Operation # MoveControl
 # GoalSelector.goals so we can remove goals
 public net.minecraft.world.entity.ai.goal.GoalSelector f_25345_ # availableGoals
 
-#GameRules.BooleanValue.create we need creatable gamerules
-public net.minecraft.world.level.GameRules$BooleanValue m_46250_(Z)Lnet/minecraft/world/level/GameRules$Type; # create
-
 # No API yet for Trunk Placers yet
 public net.minecraft.world.level.levelgen.feature.trunkplacers.TrunkPlacerType <init>(Lcom/mojang/serialization/Codec;)V # ctor
 
@@ -169,3 +166,5 @@ public net.minecraft.server.level.ServerLevel m_143288_(Lnet/minecraft/core/Bloc
 public net.minecraft.world.effect.MobEffectInstance f_19504_ # amplifier
 
 public net.minecraft.world.level.storage.loot.LootTable m_230924_(Lit/unimi/dsi/fastutil/objects/ObjectArrayList;ILnet/minecraft/util/RandomSource;)V # shuffleAndSplitItems
+
+public net.minecraft.world.item.alchemy.PotionBrewing m_43513_(Lnet/minecraft/world/item/alchemy/Potion;Lnet/minecraft/world/item/Item;Lnet/minecraft/world/item/alchemy/Potion;)V # addMix
